# mcp-security-scanner

./: .gitignore  Containerfile  README.md  pyproject.toml  requirements.txt  scanner_specs.schema
.github/workflows/: build_and_push.yaml  test.yaml
src/insecure_mcp_server/: server.py
src/mcp_scanner/: __init__.py  auth.py  cli.py  http_checks.py  models.py  scanner.py  scanner_specs.schema  security_checks.py  spec.py  sse_scanner.py  stdio_scanner.py
tests/: __init__.py  test_http_checks.py  test_scanner_insecure_server.py  test_security_checks.py  test_stdio_scanner.py
