[project]
name = "mcp-security-scanner"
version = "0.1.0"
description = "Security scanner for Model Context Protocol (MCP) servers"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "MCP Scanner", email = "huzaifas@redhat.com" }
]
dependencies = [
  "click>=8.1",
  "websockets>=12.0",
  "httpx>=0.27",
  "httpx-sse>=0.4",
  "jsonschema>=4.21",
  "pydantic>=2.6",
  "rich>=13.7",
  "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_scanner*", "insecure_mcp_server*"]

[project.scripts]
mcp-scan = "mcp_scanner.cli:main"
insecure-mcp-server = "insecure_mcp_server.server:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


